# stock-sense

./: .env.example  .gitignore  DEPLOY.md  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 0038f210c3c3_drop_batches_add_quantity_unit_cost_.py  041c5caf10bf_per_user_workspaces_owner_id_and_rls.py  15072f9d5415_add_stock_movements_append_only_audit_.py  23dc1630696e_add_items_location_id_and_added_movement_type.py  32298fc7e4fb_grant_select_on_inventory_tables_to_ai_.py  46d129b0acf4_add_locations_and_suppliers_tables.py  50a0409cdfb7_add_users_table_with_role_enum.py  5264eacdc261_drop_attribute_schema_and_item_.py  53fdb8094134_add_query_logs_table_for_ask_stocksense_.py  75beaf05bb12_add_items_table_with_soft_delete_and_.py  82e5b89b9924_add_business_name_to_users.py  95238bae6720_drop_user_role.py  ae1737cdf88d_add_items_notes.py  b116b099149a_add_query_logs_answer_text.py  c2f1ea5d8b3a_make_items_category_optional.py  c49a0218a30a_add_batches_table.py  edb85f8c0627_drop_supplier_lead_time_payment_terms.py  fd8b8ab7e991_add_categories_table.py
app/: deps.py  main.py
app/ai/: executor.py  llm.py  prompt.py  safety.py  schema.py
app/core/: config.py  db.py  security.py
app/models/: __init__.py  category.py  item.py  location.py  movement.py  query_log.py  supplier.py  user.py
app/routers/: admin.py  ask.py  auth.py  categories.py  dashboard.py  items.py  locations.py  (+2 more)
scripts/: demo_reset.py  seed.py  seed_demo.py
tests/: conftest.py  test_ask_flow.py  test_auth.py  test_pagination.py  test_safety.py  test_smoke_full_flow.py  test_stock.py
(+9 files in other folders)
