[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stocksense-backend"
version = "0.1.0"
description = "StockSense backend — FastAPI + SQLAlchemy + PostgreSQL"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0.36",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic[email]>=2.10",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "bcrypt>=4.2",
    "python-jose[cryptography]>=3.3",
    "openai>=1.50",
    "sqlglot>=25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.8",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "scripts*", "tests*"]

[tool.ruff]
line-length = 100
target-version = "py311"
